# nose

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  contiguous_op_bug  deny.toml  design.md  dist-workspace.toml  lsh_bug_test  rust-toolchain.toml
.githooks/: pre-commit
.github/: dependabot.yml
a/: f.py
b/: f.py
bench/: README.md  prune_corpus.py  setup_repos.sh
c/: decoy.py
crates/nose-eval/: Cargo.toml
crates/nose-eval/src/: lib.rs  matching.rs  schema.rs
docs/: adversarial-coevolution.md  agent-recipe.md  architecture.md  benchmark.md  capabilities.md  clone-types.md  configuration.md  continuous-integration.md  default-surface-noise-audit-2026-06-14.md  design.md  dogfooding.md  evidence-records.md  experiments.md  field-evaluation.md  formal-soundness.md  fragment-contracts.md  fragment-output-audit.md  fragment-quality-audit-2026-06-10.md  frontier-platform.md  getting-started.md  graded-witness.md  hazard-benchmark.md  hazard-ranking.md  hazard-release-checklist.md  home.md  languages.md  lawpack-provenance-audit-2026-06-10.md  normalization.md  oracle-value-model.md  query-json.md  reinvented-helpers.md  review.md  scan-json.md  scanjson-agent-audit-2026-06-10.md  scanjson-agent-audit-2026-06-13.md  semantic-kernel-audit-2026-06-09.md  semantic-kernel-roadmap.md  semantic-kernel-snapshot.md  semantic-kernel-tranche-closeout-2026-06-09.md  semantic-kernel.md  (+9 more)
examples/: sum.go  sum.py  sum.ts
formal/: Algebra.lean  BoolReduce.lean  Compare.lean  Control.lean  Functor.lean  (+2 more)
(+337 files in other folders)
